tests/samples/negative/pattern_matching/or_pattern_tuple_binding.ax
module or_pattern_tuple_binding;

fn main() -> i32 {
    let pair = (1, 2);
    return match pair {
        (left, right) | _ => 0,
    };
}
